Fix horizontal scroll on homepage

--- a/packages/portal-style/src/modules/_navigation-block.scss
+++ b/packages/portal-style/src/modules/_navigation-block.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 -30px 0 0;
+    margin: 0 -15px 0 0;
     padding: 0;
   }
 
@@ -52,6 +52,9 @@
       #{$self}-desc {
         display: none;
       }
+    }
+    &:last-child a.dp-po-navigation-block-link {
+      margin-right: 15px;
     }
   }
 
